; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/xulkal/extr_custom_tap_dance.c_matrix_scan_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/xulkal/extr_custom_tap_dance.c_matrix_scan_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@td_keycode = common dso_local global i64 0, align 8
@KC_TRANSPARENT = common dso_local global i64 0, align 8
@td_timer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix_scan_user() #0 {
  %1 = load i64, i64* @td_keycode, align 8
  %2 = load i64, i64* @KC_TRANSPARENT, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %10

4:                                                ; preds = %0
  %5 = load i32, i32* @td_timer, align 4
  %6 = call i64 @timer_expired(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %4
  %9 = call i32 @run_custom_tap_dance(i32 0)
  br label %10

10:                                               ; preds = %8, %4, %0
  ret void
}

declare dso_local i64 @timer_expired(i32) #1

declare dso_local i32 @run_custom_tap_dance(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
